fininshed waypoint hub placement & database

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-"items.eden.lodestone_hub": "Lodestone Hub",
+"items.eden.waypoint_hub": "Waypoint Hub",
 "items.eden.portal_horn": "Portal Horn",
 "instrument.eden.portal_travel.horn": "Portal Travel"
 }
